--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro check && astro build",
-    "preview": "astro preview",
+    "preview": "deno run --allow-net --allow-read --allow-env ./dist/server/entry.mjs",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.8",
     "@astrojs/check": "^0.5.9",
+    "@astrojs/deno": "^5.0.1",
+    "astro": "^4.5.8",
     "typescript": "^5.4.2"
   }
 }
